crates/vue_compiler_sfc/src/script/snapshots/vue_compiler_sfc__script__define_props_destructure__tests__snapshots__aliasing.snap
---
source: crates/vue_compiler_sfc/src/script/define_props_destructure.rs
expression: result
---
let a = x
let b = __props.foo
