crates/vue_compiler_sfc/src/script/snapshots/vue_compiler_sfc__script__define_props_destructure__tests__snapshots__array_methods.snap
---
source: crates/vue_compiler_sfc/src/script/define_props_destructure.rs
expression: result
---
const filtered = __props.items.filter(x => x > 0)
const mapped = __props.items.map(x => x * 2)
const reduced = __props.items.reduce((acc, x) => acc + x, 0)
