crates/vue_compiler_sfc/src/script/snapshots/vue_compiler_sfc__script__define_props_destructure__tests__snapshots__computed_property.snap
---
source: crates/vue_compiler_sfc/src/script/define_props_destructure.rs
expression: result
---
const double = computed(() => __props.count * 2)
const triple = computed(function() { return __props.count * 3 })
