crates/vue_compiler_sfc/src/script/snapshots/vue_compiler_sfc__script__define_props_destructure__tests__snapshots__conditional_expression.snap
---
source: crates/vue_compiler_sfc/src/script/define_props_destructure.rs
expression: result
---
const display = __props.show ? __props.msg : 'hidden'
const result = __props.show && __props.msg || 'default'
